--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         </div>
         <div class="copyright text-center">
             <p>&copy; 2026 سُقيا الرياض - جميع الحقوق محفوظة | تصميم GMTWEB</p>
+            <p style="color: aliceblue;">Design and programming by<a href="https://www.facebook.com/profile.php?id=100090592885243&mibextid=ZbWKwL" target="_blank"><strong style="color: rgb(177, 177, 13);">GMTWEB</strong> </a> </p>
         </div>
     </footer>
 
